# voice-stack

./: .clineignore  .dockerignore  .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ARCHITECTURE.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.ci  LICENSE  README.md  docker-compose.yml  noxfile.py  pyproject.toml  pyrightconfig.json  renovate.json
compose/: asr.yml  tts.yml
docs/: ARCHITECTURE.md  CONCURRENCY_FEATURES.md  LOAD_TESTING.md  WHISPER_CHEAT_SHEET.md
scripts/: .env.production.asr  .env.production.tts  SERVICE_INSTALLATION.md  accept_coqui_license.sh  build_repo_map.py  build_repo_map_v2.py  common-setup.sh  entrypoint.sh  install-asr.sh  install-tts.sh  install_system_deps.sh  install_torch.sh  load_test.py  repo_tokens.py  uninstall-asr.sh  uninstall-tts.sh  update-asr.sh  update-tts.sh  voice-stack-asr.service.template  voice-stack-tts.service.template
src/asr/: app.py  engine.py  engine_factory.py  exceptions.py
src/asr/api/api_v1/: api.py
src/asr/api/api_v1/endpoints/: bazarr.py  openai.py
src/asr/engine/: base.py  fasterwhisper.py  whisper.py
src/asr/schemas/: audio_engine.py  bazarr.py  openai.py
src/core/: error_handler.py  exceptions.py  logging.py  middleware.py  settings.py
src/tts/: app.py  config.py  engine_factory.py  engine_xtts.py  exceptions.py
src/tts/api/api_v1/: api.py
src/tts/api/api_v1/endpoints/: openai.py
src/tts/engine/: base.py  coqui.py
src/tts/schemas/: audio_engine.py  openai.py
src/utils/: audio_helper.py  debugpy_helper.py  language_helper.py  queue_manager.py  text.py
src/utils/audio/: audio_helper.py  ffmpeg_helper.py
src/utils/language/: language_codes.py  language_helper.py  language_manager.py
tests/: TESTING_PLAN.md  __init__.py  conftest.py
tests/integration/: conftest.py
tests/integration/asr/: __init__.py  test_integration_smoke.py
tests/integration/tts/: __init__.py  test_integration_smoke.py
tests/unit/: __init__.py
tests/unit/asr/: __init__.py  test_api_bazarr.py  test_api_openai.py  test_app.py  test_engine_factory.py  test_engine_faster_whisper.py  test_engine_whisper.py  test_schemas.py
tests/unit/core/: test_logging.py  test_settings.py
tests/unit/tts/: __init__.py  conftest.py  test_api_openai.py.skip  test_app.py  test_engine_base.py  test_schemas.py
tests/unit/utils/: __init__.py  test_language_codes.py  test_language_helper.py  test_text.py
